--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,21 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta property="og:url" content="https://hecarrillo.github.io/research_website/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Do you want a start a business in Mexico?">
+    <meta property="og:description" content="This sociological study will help you become a succesful businessman.">
+    <meta property="og:image" itemprop="image" content="https://hecarrillo.github.io/research_website/public/videos/FindingsHero.jpg">
+    <meta property="og:image:secure_url" content="https://hecarrillo.github.io/research_website/public/videos/FindingsHero.jpg">
+    <meta property="og:image:height" content="300">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:type" content="image/png">
+    <meta property="fb:app_id" content="2827498314139154">
+    <meta name="twitter:card" content="summary_large:image">
+    <meta name="twitter:title" content="Do you want to start a business in Mexico?">
+    <meta name="twitter:description" content="This sociological study will help you become a succesful businessman.">
+    <meta name="twitter:image" content="https://hecarrillo.github.io/research_website/public/videos/FindingsHero.jpg">
+    <meta name="twitter:description" content="This sociological study will help you become a succesful businessman.">
     <meta name="keywods"content="Business, Businesses, Sociological study, Mexico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
