add Google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,7 @@
     <meta name="keywods"content="Business, Businesses, Sociological study, Mexico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Why do people undertake businesses in Mexico? A Sociological Study"
-    />
+    <meta name="description" content="Why do people undertake businesses in Mexico? A Sociological Study"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
       rel="stylesheet"
@@ -36,7 +33,16 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
       rel="stylesheet"
     />
-
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="<script>
+  " target="_blank" onclick="return openUrl(this.href)">https://www.googletagmanager.com/gtag/js?id=G-X36VMRV22C"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  
+  gtag('config', 'G-X36VMRV22C');
+  </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
