--- a/public/index.html
+++ b/public/index.html
@@ -34,15 +34,14 @@
       rel="stylesheet"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="<script>
-  " target="_blank" onclick="return openUrl(this.href)">https://www.googletagmanager.com/gtag/js?id=G-X36VMRV22C"></script>
-  <script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X36VMRV22C"></script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  
+
   gtag('config', 'G-X36VMRV22C');
-  </script>
+</script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
