--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Do you want a start a business in Mexico?">
     <meta property="og:description" content="This sociological study will help you become a succesful businessman.">
-    <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/videos/FindingsHero.jpg">
-    <meta property="og:image:secure_url" content="%PUBLIC_URL%/videos/FindingsHero.jpg">
+    <meta property="og:image" itemprop="image" content="/research_website/videos/FindingsHero.jpg">
+    <meta property="og:image:secure_url" content="/research_website/videos/FindingsHero.jpg">
     <meta property="og:image:height" content="300">
     <meta property="og:image:width" content="300">
     <meta property="og:image:type" content="image/png">
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large:image">
     <meta name="twitter:title" content="Do you want to start a business in Mexico?">
     <meta name="twitter:description" content="This sociological study will help you become a succesful businessman.">
-    <meta name="twitter:image" content="%PUBLIC_URL%/videos/FindingsHero.jpg">
+    <meta name="twitter:image" content="/research_website/videos/FindingsHero.jpg">
     <meta name="twitter:description" content="This sociological study will help you become a succesful businessman.">
     <meta name="keywods"content="Business, Businesses, Sociological study, Mexico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
