--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Why do people undertake businesses in Mexico? A Sociological Study</title>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta property="og:url" content="https://hecarrillo.github.io/research_website/">
@@ -13,7 +14,7 @@
     <meta property="og:image:width" content="300">
     <meta property="og:image:type" content="image/png">
     <meta property="fb:app_id" content="2827498314139154">
-    <meta name="twitter:card" content="summary_large:image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Do you want to start a business in Mexico?">
     <meta name="twitter:description" content="This sociological study will help you become a succesful businessman.">
     <meta name="twitter:image" content="/research_website/videos/FindingsHero.jpg">
