--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <meta property="og:image:type" content="image/png">
     <meta property="fb:app_id" content="2827498314139154">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Do you want to start a business in Mexico?">
-    <meta name="twitter:description" content="This sociological study will help you become a succesful businessman.">
-    <meta name="twitter:image" content="/research_website/videos/FindingsHero.jpg">
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Do you want to start a business in Mexico?"/>
+    <meta name="twitter:description" content="This sociological study will help you become a succesful businessman."/>
+    <meta name="twitter:image" content="/research_website/videos/FindingsHero.jpg"/>
     
     <meta name="keywods"content="Business, Businesses, Sociological study, Mexico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
